# beacon-trace

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  install.sh
backend/: migrate.py  requirements.txt
backend/app/: database.py  main.py  models.py  websocket.py
backend/app/routers/: agents.py  alerts.py  metrics.py  traces.py
backend/app/services/: alert_service.py
backend/sdk/python/: README.md  pyproject.toml  setup.py
backend/sdk/python/beacon/: __init__.py  decorators.py  tracer.py
backend/sdk/typescript/: package.json
backend/sdk/typescript/src/: index.ts  middleware.ts  tracer.ts
cli/: beacon-cli.ts
docs/: LINEAGE_FEATURES_README.md  agents.md  codemap.md
examples/: lineage_example.py  python_example.py  typescript_example.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ActivityFeed.tsx  AgentGrid.tsx  AlertPanel.tsx  CostTrendChart.tsx  HourlyActivityChart.tsx  Layout.tsx  RetryChart.tsx  StatCard.tsx  TraceExplorer.tsx  TraceTree.tsx
frontend/src/hooks/: useApi.ts  useWebSocket.ts
frontend/src/pages/: AgentDetail.tsx  Dashboard.tsx  Traces.tsx
