[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beacon-trace"
version = "1.0.2"
description = "Local-first observability SDK for AI agents"
readme = "README.md"
license = "MIT"
authors = [{ name = "Beacon Team - Vikas Budde", email = "vikas.budde@hotmail.com" }]
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]
keywords = ["ai", "agents", "observability", "tracing", "llm", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/pisigmac/beacon-trace"
Repository = "https://github.com/pisigmac/beacon-trace"
Issues = "https://github.com/pisigmac/beacon-trace/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["beacon*"]
